--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "recharts": "^2.0.8",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.0"
   },
