--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-infinite-scroller": "^1.2.1",
+    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "graphql": "^15.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-infinite-scroller": "^1.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.8",
     "typescript": "^4.2.3",
