--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -1,7 +1,12 @@
 {
   "routes": [
     {
-      "route": "/nftbox/*"
+      "route": "/nftbox/*",
+      "serve": "index.html"
+    },
+    {
+      "route": "/*",
+      "serve": "index.html"
     }
   ]
 }
