--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -2,11 +2,13 @@
   "routes": [
     {
       "route": "/nftbox/*",
-      "serve": "index.html"
+      "serve": "/index.html",
+      "statusCode": 200
     },
     {
       "route": "/*",
-      "serve": "index.html"
+      "serve": "/index.html",
+      "statusCode": 200
     }
   ]
 }
