--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-shimmer": "^3.1.1",
     "recharts": "^2.0.8",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.0"
